# NOAAPI

./: pyproject.toml
.github/workflows/: release.yaml  test.yaml
src/noaapi/: main.py
