[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "noaapi"
version = '0.0.1'
dependencies = [
    "requests",
]
authors = [
	{name="Michael van Dyk",email="mvandyk@protonmail.com"}
]
requires-python = ">=3.10"

[project.scripts]
noaapi = "noaapi:main.run"